html horizontal scroll fix. max-width and overflow x set. main grid images text-align center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+html {
+    max-width:100%;
+    overflow-x: hidden;
+}
 body {
     background-color: #CEF7A0;
 }
@@ -29,6 +33,7 @@ body {
     width:100%;
     height:450px;
     padding-top:5px;
+    text-align:center;
 } 
 .main-grid img {
      overflow:hidden;
